fix: notify button safari (#407)
* feat: inline button and safari compatible

* chore: remove unused code

* chore: cursor

--- a/src/theme/NotifyButton/style.css
+++ b/src/theme/NotifyButton/style.css
@@ -1,5 +1,8 @@
 .notify-button {
+  vertical-align: middle;
+  display: inline;
   width: 100%;
+  cursor: pointer;
 }
 
 .container {
@@ -81,6 +84,7 @@
 .searchbox-wrap input {
   flex: 1;
   padding: 20px 16px;
+  background-color: field;
   font-size: 14px;
   -webkit-border-top-left-radius: 18px;
   -webkit-border-bottom-left-radius: 18px;
@@ -90,13 +94,16 @@
   border-bottom-left-radius: 18px;
   box-shadow: none;
   border: none;
+  margin: 0;
 }
 
 .searchbox-wrap input:focus {
   outline: none;
+  background-color: field;
 }
 
 .searchbox-wrap button {
+  margin: 0;
   padding-right: 10px;
   background-color: #fff;
   -webkit-border-top-right-radius: 18px;
